--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>ROSS</title>
+		<title>Dean Court Community Centre</title>
 		<!-- Description, Keywords and Author -->
-		<meta name="description" content="Your description">
-		<meta name="keywords" content="Your,Keywords">
-		<meta name="author" content="ResponsiveWebInc">
+		<meta name="description" content="Dean Court Community Centre - Growing our Community">
+		<meta name="keywords" content="Dean, Court, Community, Centre">
+		<meta name="author" content="Brian Sharland @sharland">
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
@@ -39,7 +39,6 @@
 		<link rel="shortcut icon" href="#">
 		
 	</head>
-	
 	<body>
 		
 			
