full template replacement

--- a/template_pages/0-base.html
+++ b/template_pages/0-base.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Dean Court Community Centre</title>
+		<title>ROSS, Blank Page</title>
 		<!-- Description, Keywords and Author -->
-		<meta name="Dean Court Community Centre" content="A community centre in west Oxford">
-		<meta name="Dean,Court,Community,Centre" content="Your,Keywords">
+		<meta name="description" content="Your description">
+		<meta name="keywords" content="Your,Keywords">
 		<meta name="author" content="ResponsiveWebInc">
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -59,7 +59,7 @@
 		<!-- Wrapper -->
 		<div class="wrapper">
 			
-						<!-- Header Start -->
+			<!-- Header Start -->
 			
 			<div class="header">
 				<!-- Navigation Bar -->
@@ -73,7 +73,7 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-							<a class="navbar-brand" href="#"><span class="logo"><img src="DC_imgs/logo_white.png" width="75"></span></a>
+							<a class="navbar-brand" href="#"><span class="logo"><i class="fa fa-crosshairs"></i>Ross</span></a>
 						</div>
 
 						<!-- Collect the nav links, forms, and other content for toggling -->
@@ -82,36 +82,39 @@
 								<li class="dropdown">
 									<a class="dropdown-toggle" data-toggle="dropdown" href="#">Home <span class="fa fa-angle-down"></span></a>
 									<ul class="dropdown-menu" role="menu">
-										<li><a href="#">Latest News</a></li>
-										<li><a href="#">Volunteer of the Month</a></li>
+										<li><a href="index.html">Revolution Slider</a></li>
+										<li><a href="index-bs-carousel.html">Bootstrap Slider</a></li>
+										<li><a href="index-bx-slider.html">BX Slider</a></li>
+										<li><a href="index-flex-slider.html">Flex Slider</a></li>
+										<li><a href="index-column.html">Column Index</a></li>
+									</ul></li>
+								<li><a href="aboutus.html">About Us</a></li>
+								<li class="dropdown">
+									<a class="dropdown-toggle" data-toggle="dropdown" href="#">Blog <span class="fa fa-angle-down"></span></a>
+									<ul class="dropdown-menu" role="menu">
+										<li><a href="blog.html">Blog One</a></li>
+										<li><a href="blog-1.html">Blog Two</a></li>
+										<li><a href="blog-single.html">Single Blog One</a></li>
+										<li><a href="blog-single-1.html">Single Blog Two</a></li>
 									</ul></li>
 								<li class="dropdown">
-									<a class="dropdown-toggle" data-toggle="dropdown" href="#">What's On <span class="fa fa-angle-down"></span></a>
+									<a class="dropdown-toggle" data-toggle="dropdown" href="#">Pages <span class="fa fa-angle-down"></span></a>
 									<ul class="dropdown-menu" role="menu">
-										<li><a href="#">Calendar</a></li>
-										<li><a href="#">Groups</a></li>
+										<li><a href="error.html">404 Error</a></li>
+										<li><a href="coming-soon.html">Coming Soon</a></li>
+										<li><a href="faq.html">FAQ</a></li>
+										<li><a href="feature.html">Features</a></li>
+										<li><a href="gallery.html">Gallery</a></li>
+										<li><a href="landing-page.html">Landing Page</a></li>
+										<li><a href="login.html">Login</a></li>
+										<li><a href="portfolio.html">Portfolio</a></li>
+										<li><a href="pricing.html">Pricing</a></li>
+										<li><a href="product.html">Product</a></li>
+										<li><a href="registration.html">Register</a></li>
+										<li><a href="service.html">Services</a></li>
+										<li><a href="sitemap.html">Site Map</a></li>
 									</ul></li>
-								<li class="dropdown">
-									<a class="dropdown-toggle" data-toggle="dropdown" href="#">Hire <span class="fa fa-angle-down"></span></a>
-									<ul class="dropdown-menu" role="menu">
-										<li><a href="#">Rooms and Prices</a></li>
-										<li><a href="#">Terms and Conditions</a></li>
-									</ul></li>
-								<li class="dropdown">
-									<a class="dropdown-toggle" data-toggle="dropdown" href="#">Community Info <span class="fa fa-angle-down"></span></a>
-									<ul class="dropdown-menu" role="menu">
-										<li><a href="#">Map</a></li>
-										<li><a href="#">Organisations</a></li>
-										<li><a href="#">Survey</a></li>
-										<li><a href="#">Local History</a></li>
-									</ul></li>
-								<li><a href="contactus.html">Community Police</a></li>
-								<li class="dropdown">
-									<a class="dropdown-toggle" data-toggle="dropdown" href="#">Contact Us <span class="fa fa-angle-down"></span></a>
-									<ul class="dropdown-menu" role="menu">
-										<li><a href="#">Contact details</a></li>
-										<li><a href="#">Centre Team</a></li>
-									</ul></li>
+								<li><a href="contactus.html">Contact Us</a></li>
 							</ul>
 						</div><!-- /.navbar-collapse -->
 					</div>
@@ -142,7 +145,7 @@
 				<!-- INNER PAGE BANNER END -->
 				
 				<!-- Inner Page Code here... -->
-
+				
 			</div>
 			
 			<!-- Inner Page Content End -->			
@@ -221,12 +224,14 @@
 				<div class="container">	
 					<!-- Social Media -->
 					<div class="social">
-						<a href="https://www.facebook.com/pages/Dean-Court-Community-Association/120475221370996?fref=ts" class="facebook"><i class="fa fa-facebook"></i></a>
-						<a href="http://twitter.com/deancourtcc" class="twitter"><i class="fa fa-twitter"></i></a>
+						<a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+						<a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+						<a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
+						<a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
 					</div>
 					<!-- Copy right -->
 					<div class="copy-right">
-						<p>&copy; Copyright 2014 <a href="#">Dean Court Community Association</a></p>
+						<p>&copy; Copyright 2014 <a href="#">Company Name</a></p>
 					</div>
 				</div>
 			</div>
